[gd_scene load_steps=4 format=3 uid="uid://ch2ujipmh7p8u"]

[ext_resource type="Script" path="res://scripts/game.gd" id="1_ned3q"]
[ext_resource type="Texture2D" uid="uid://dcfoj5i0jgh80" path="res://sprites/city.png" id="2_fvheh"]
[ext_resource type="PackedScene" uid="uid://b8yqqxef38ox0" path="res://decision_making.tscn" id="3_s4f7i"]

[node name="Game" type="Node2D"]
script = ExtResource("1_ned3q")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -1

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.247059, 0.486275, 0.713726, 1)

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="YearLabel" type="Label" parent="CanvasLayer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_font_sizes/font_size = 32
text = "2015"

[node name="NextYearButton" type="Button" parent="CanvasLayer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
theme_override_font_sizes/font_size = 32
text = "Next Year"

[node name="CityBackground" type="Sprite2D" parent="."]
position = Vector2(570, 354)
texture = ExtResource("2_fvheh")

[node name="DecisionMaking" parent="." instance=ExtResource("3_s4f7i")]
visible = false

[connection signal="pressed" from="CanvasLayer/MarginContainer/NextYearButton" to="." method="_on_next_year_button_pressed"]
